# TRL

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SETUP.md
Docs/: Buffer.md  README.md  TRL_DataTypes.md
Test/: CMakeLists.txt
Test/Src/: Main.c
TotallyReliableLibrary/: CMakeLists.txt
TotallyReliableLibrary/Include/: BinarySearch.h  Buffer.h  Chain.h  DataStructures.h  DataType.h  Datatype.h  Print.h  SortingAlogs.h
TotallyReliableLibrary/Src/: TRL.c  TRL.h
TotallyReliableLibrary/Src/Algorithms/: BinarySearch.c  BubbleSort.c  SortingAlogs.c
TotallyReliableLibrary/Src/DataStructures/: Buffer.c  Buffer.h  Chain.c
TotallyReliableLibrary/Src/Util/: Assert.h  DataType.c  Datatype.c  Datatype.h  TRL_Assert.h
